<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/system_settings">

        <CheckBoxPreference
            android:title="@string/no_picture_mode"
            android:key="no_picture_mode"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:title="@string/upload_location"
            android:key="upload_location"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:title="@string/clear_cache"
            android:key="clear_cache"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notification_settings">

        <CheckBoxPreference
            android:title="@string/push_message"
            android:key="push_message"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>