<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_move_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/light_blue_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/move_up"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_move_down"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/light_blue_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/move_down"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/light_blue_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/action_delete"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>