<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingTop="4dp">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/reset_password_message" />

    <com.weicong.gotravelling.view.FlatButton
        android:id="@+id/btn_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_message"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/email"
        android:textSize="16sp" />

    <com.weicong.gotravelling.view.FlatButton
        android:id="@+id/btn_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_email"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"/>

</RelativeLayout>