<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:paddingBottom="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <com.weicong.gotravelling.view.DownTimerProgress
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:layout_below="@id/layout_phone"
        android:visibility="invisible"/>

    <com.weicong.gotravelling.view.FlatButton
        android:id="@+id/btn_re_get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/progress"
        android:layout_marginRight="12dp"
        android:layout_marginTop="2dp"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:text="@string/re_get_code"
        android:textSize="14sp"
        android:visibility="invisible"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@id/progress"
        android:layout_below="@id/layout_phone">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <com.weicong.gotravelling.view.FlatButton
        android:id="@+id/btn_get_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_code"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:clickable="true"
        android:layout_below="@id/layout_phone"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        />

    <com.weicong.gotravelling.view.FlatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_re_get_code"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:clickable="true"/>

</RelativeLayout>