<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorPrimary"
        app:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_with_stroke_bg"
            android:paddingBottom="14dp">

            <ImageView
                android:id="@+id/iv_app_icon"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/share_app_icon"/>

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/iv_app_icon"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="19sp"/>

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_app_name"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/iv_app_icon"
                android:text="@string/app_version"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_app_version"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@id/iv_app_icon"
                android:text="@string/app_description"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_app_icon"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_share_app"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:text="@string/share_app"/>

                <Button
                    android:id="@+id/btn_check_app"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check_app"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/stroke_bg_selector"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@drawable/black_to_white_color"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>